--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,8 @@ input {
 
 .right-container {
   flex: 1 1 27%;
-  padding: 16px;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   min-width: 250px;
 }
@@ -82,7 +83,11 @@ input {
 
 .left-container {
   flex: 1 1 33%;
+  padding: 16px;
+  box-sizing: border-box;
+  height: 100vh;
   min-width: 250px;
+  box-shadow: inset -1px 0px 0px 0px rgba(255,255,255,0.04);
 }
 
 .username-label {
@@ -233,39 +238,26 @@ input {
 }
 
 .chat-bar {
-  z-index: 90;
-  right:0;
-  top: 0;
   padding: 16px;
-  width: 300px;
-  opacity: 0.8;
   display: flex;
-  flex-direction: column;
-  position: fixed;
   height: 100vh;
+  flex: 1 1 auto;
+  flex-direction: column;
   box-sizing: border-box;
-  box-shadow: 0px 0 8px 0px rgba(0,0,0,0.4),
-  inset 1px 0px 1px 0px rgba(255,255,255,0.08);
-  background-color: #101010;
-  transition: right 200ms ease-in;
-}
-
-.chat-bar.hidden {
-  right: -300px;
+  box-shadow: inset 1px 0px 0px 0px rgba(255,255,255,0.04);
 }
 
 .chat-history {
   overflow-y: scroll;
   overflow-x: hidden;
-  background-color: #303030;
+  background-color: #202020;
   border-radius: 10px;
   scrollbar-width: none;
-  flex: 0 1 100%;
+  flex: 1 1 auto;
   padding:0;
   margin-bottom: 16px;
   opacity: 1;
-  transition: opacity 200ms linear;
-  box-shadow: inset 0px 8px 0px 0 rgba(0,0,0,0.4);
+  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.4);
 }
 
 .chat-history::-webkit-scrollbar {
@@ -282,7 +274,6 @@ input {
   flex-direction: row;
   align-items: flex-end;
   height: 40px;
-  margin-bottom: -64px;
   flex: 0 0 auto;
   border-radius: 10px;
 }
@@ -361,9 +352,9 @@ input {
   flex: 1 1 auto;
   min-width: 0;
   font-size: 18px;
-  height: 38px;
+  height: 40px;
   font-family: Montserrat;
-  box-shadow: inset 0 6px 0px 0px rgba(0,0,0,0.4);
+  box-shadow: inset 0 6px 0px 0px rgba(0,0,0,0.2);
   padding: 0 16px;
   opacity: 1;
   transition: opacity 200ms linear;
@@ -430,12 +421,16 @@ input {
 }
 
 .statement-panel > div > span {
-  flex: 0 0 52px;
+  flex: 0 0 68px;
   text-align: center;
   font-family: Montserrat;
   color: white;
   user-select: none;
   text-shadow: 0 2px 1px rgb(0,0,0);
+}
+
+.statement-subpanel-die .die {
+  margin: 0 8px;
 }
 
 .previous-statement-panel{
@@ -462,7 +457,7 @@ input {
 
 #dimmer {
   z-index: 190;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.8);
   position: fixed;
   left:0;
   top: 0;
@@ -513,8 +508,11 @@ input {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  height: 100vh;
+  height: calc( 100vh - 32px );
+  flex: 1 1 auto;
+  border-radius: 10px;
   scrollbar-width: none;
+  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.4);
 }
 
 .game-event-list::-webkit-scrollbar {
