--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ input {
 }
 
 .App-body {
-  height: inherit;
+  height: 100vh;
   background-color: #121212;
   font-size: calc(10px + 2vmin);
   min-width: 900px;
@@ -48,7 +48,7 @@ input {
 }
 
 .main-content {
-  height: inherit;
+  height: 100vh;
   z-index: 50;
   display:flex;
   min-width: 900px;
@@ -82,11 +82,14 @@ input {
 }
 
 .left-container {
+  display: flex;
+  flex-direction: column;
   flex: 1 1 33%;
   padding: 16px;
   box-sizing: border-box;
   height: 100vh;
-  min-width: 250px;
+  max-height: 100vh;
+  min-width: 460px;
   box-shadow: inset -1px 0px 0px 0px rgba(255,255,255,0.04);
 }
 
@@ -250,7 +253,7 @@ input {
 .chat-history {
   overflow-y: scroll;
   overflow-x: hidden;
-  background-color: #202020;
+  background-color: #1a1a1a;
   border-radius: 10px;
   scrollbar-width: none;
   flex: 1 1 auto;
@@ -286,6 +289,7 @@ input {
   padding: 0px 16px 6px 16px;
   flex: 0 0 auto;
   height: 40px;
+  text-transform: uppercase;
   color: whitesmoke;
   border-radius: 10px;
   font-family: Montserrat;
@@ -315,11 +319,12 @@ input {
   margin: 0;
   width: 40px;
   padding: 0 0 6px 0;
+  padding-left: 0;
 }
 
 .plusminus-btn:active {
   height: 34px;
-  padding: 0 0 0 0;
+  padding: 0 0 0 0 !important;
 }
 
 .btn-claim {
@@ -434,6 +439,7 @@ input {
 }
 
 .previous-statement-panel{
+  user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -493,25 +499,25 @@ input {
 }
 
 .chat-message:nth-child(2n+1) {
-  background-color: rgba(100,100,100,0.2);
+  background-color: rgba(255,255,255,0.1);
 }
 
 .chat-message:nth-child(2n) {
-  background-color: rgba(100,100,100,0.5);
+  background-color: rgba(255,255,255,0.02);
 }
 
-.chat-message:last-of-type {
-  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
+.chat-message:last-child {
+  box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.4);
 }
 
 .game-event-list {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  height: calc( 100vh - 32px );
   flex: 1 1 auto;
   border-radius: 10px;
   scrollbar-width: none;
+  background-color: #1a1a1a;
   box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.4);
 }
 
@@ -522,7 +528,11 @@ input {
 .game-event-list-item {
   padding: 16px;
   color: lightgray;
-  font-size: 15px;
+  font-size: 16px;
+}
+
+.game-event-list-item:nth-child(2n) {
+  background-color: rgba(255,255,255,0.02)
 }
 
 .game-event-list-item:nth-child(2n+1) {
@@ -541,6 +551,7 @@ input {
 .main-menu-container {
   height: inherit;
   display: flex;
+  flex: 1 1 auto;
   align-items: center;
   justify-content: center;
 }
@@ -605,7 +616,6 @@ input {
 .main-menu-panel input {
   flex: 0 0 48px;
   font-size: 22px;
-  margin-top: 36px;
   justify-self: center;
 }
 
@@ -710,4 +720,99 @@ input {
   font-size: 128px;
   color: lightgray;
   flex: 1 1 auto;
+}
+
+.server-status {
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1 1 auto;
+  font-size:16px;
+  font-weight: 600;
+}
+
+.server-status.connected {
+  color: green;
+}
+
+.server-status.disconnected {
+  color: rgb(211, 48, 48);
+}
+
+.game-info-control-panel {
+  user-select: none;
+  flex: 0 0 auto;
+  color: lightgray;
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px;
+  border-radius: 10px;
+  background-color: #202020;
+  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.4);
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.info-bar {
+  display: flex;
+  flex: 0 0 auto;
+  margin-bottom: 32px;
+  justify-content: space-between;
+}
+
+.total-dice, .game-time {
+  display: flex;
+  flex: 1 1 50%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.total-dice {
+  margin-right: 16px
+}
+
+.game-time {
+  margin-left: 16px;
+  display: flex;
+}
+
+.game-clock {
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: flex-end;
+}
+
+.game-clock > .clock-char{
+  display: inline-flex;
+  flex: 0 0 1.2rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-clock > .clock-char:nth-child(3),
+.game-clock > .clock-char:nth-child(6) {
+  flex: 0 0 0.5rem;
+}
+
+.sound-control {
+  display: flex;
+  align-items: center;
+}
+
+.sound-control svg {
+  padding: 0;
+  flex: 0 0 7%;
+  display: flex;
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.volume-slider {
+  appearance: none;
+  flex: 1 1 93%;
+  height: 8px;
+  margin-left: 32px;
+  box-shadow: none;
+  background-color: #101010;
 }
