--- a/src/App.css
+++ b/src/App.css
@@ -402,7 +402,7 @@ input {
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 250px;
+  height: 300px;
   top: 50%;
   left: 50%;
   margin-top: -100px;
@@ -414,7 +414,7 @@ input {
 
 .statement-panel {
   display: flex;
-  margin-top: 12px;
+  margin-top: 48px;
   padding: 0 32px 0 32px;
   justify-content: space-between;
 }
@@ -560,7 +560,6 @@ input {
   padding: 32px;
   display: flex;
   flex: 0 1 auto;
-  height: 600px;
   animation-name: menuPanelFadingIn;
   animation-duration: 500ms;
   opacity: 1;
@@ -578,6 +577,7 @@ input {
 .menu-btns-container {
   display: flex;
   flex: 1 1 auto;
+  margin-top:32px;
   flex-direction: column;
   justify-content: flex-end;
   overflow: hidden;
@@ -645,6 +645,7 @@ input {
   color: lightgray;
   text-align: center;
   display: flex;
+  padding: 64px 0;
   justify-content: center;
   align-items: center;
   flex: 1 1 auto;
@@ -665,12 +666,10 @@ input {
   orphans: 0;
 }
 
-.room-code-panel {
-  height: 300px;
-}
 
 .room-code-panel input {
-  margin-top: 0px;
+  margin-top: 24px;
+  margin-bottom: 24px;
   flex: 0 0 64px;
   font-size:24px;
 }
@@ -725,6 +724,8 @@ input {
 .server-status {
   user-select: none;
   display: flex;
+  margin-top:32px;
+  margin-bottom:16px;
   align-items: center;
   justify-content: center;
   flex: 1 1 auto;
@@ -815,4 +816,14 @@ input {
   margin-left: 32px;
   box-shadow: none;
   background-color: #101010;
+}
+
+.join-error {
+  padding-top: 16px;
+  text-align: center;
+  color: rgb(211, 48, 48)
+}
+
+.join-error.hidden {
+  display: none;
 }
