--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,14 @@ input {
   font-family: Montserrat;
   display: flex;
   flex-direction: column;
-  min-width: 900px;
+  min-width: 1110px;
 }
 
 .App-body {
   height: 100vh;
   background-color: #121212;
   font-size: calc(10px + 2vmin);
-  min-width: 900px;
+  min-width: 1110px;
 }
 
 .App-link {
@@ -51,7 +51,7 @@ input {
   height: 100vh;
   z-index: 50;
   display:flex;
-  min-width: 900px;
+  min-width: 1110px;
   animation-name: menuPanelFadingIn;
   animation-duration: 500ms;
   opacity: 1;
@@ -405,7 +405,7 @@ input {
   height: 300px;
   top: 50%;
   left: 50%;
-  margin-top: -100px;
+  margin-top: -150px;
   margin-left: -200px;
   border-radius: 10px;
   box-shadow: inset 0 -8px 0 0 rgba(0,0,0,0.4), 0 0 0 4px rgba(255,255,255,0.4);
@@ -656,11 +656,13 @@ input {
   color: lightgray;
   text-align: center;
   display: flex;
+  margin-top:64px;
   justify-content: center;
   align-items: center;
   flex: 1 1 auto;
   max-width: 400px;
 }
+
 
 .about-text > span {
   orphans: 0;
@@ -713,6 +715,10 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+
+.error-panel svg {
+  color: orange;
 }
 
 .error-symbol {
@@ -813,6 +819,7 @@ input {
   appearance: none;
   flex: 1 1 93%;
   height: 8px;
+  padding: 0;
   margin-left: 32px;
   box-shadow: none;
   background-color: #101010;
