--- a/src/App.css
+++ b/src/App.css
@@ -908,3 +908,146 @@ input {
     opacity: 0.75;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .App {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    min-width: 100vw;
+    max-width: 300vw;
+    max-height: 100vh;
+  }
+  
+  .App-body {
+    width: 100vw;
+    min-width: 100vw;
+    display: flex;
+    max-width: 300vw;
+    max-height: 100vh;
+    
+    overflow: hidden;
+  }
+
+  .main-menu-container {
+    flex-direction: column;
+  }
+
+  .main-menu-panel {
+    min-width: 0;
+    width: 100vw;
+    max-width: 100vw;
+    box-shadow: none;
+    border-radius: 0px;
+    justify-content: space-around;
+    flex: 1 1 auto;
+  }
+
+  .logo {
+    width: 80vw;
+    padding-top:32px;
+  }
+
+  .server-status {
+    margin-top: 0;
+    flex: 2 1 auto;
+  }
+
+  .menu-btns-container {
+    margin-top: 0;
+    flex: 1 1 auto;
+    justify-content: center;
+  }
+  
+  .main-menu-panel input {
+    font-size: 16px;
+    align-items: center;
+  }
+
+  .main-content {
+    min-width: 0;
+    flex: 1 1 auto;
+    background-color: #141414;
+    min-width: 300vw;
+    max-width: 300vw;
+    max-height: 100vh;
+    overflow-y: hidden;
+  }
+
+  .left-container {
+    min-width: 0;
+    top:0;
+    position: absolute;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .center-container {
+    min-width: 0;
+    position: absolute;
+    left: 100vw;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .right-container {
+    min-width: 0;
+    width: 100vw;
+    top:0;
+    height: 100vh;
+    position: absolute;
+    left: 200vw;
+  }
+
+  .die {
+    flex: 0 0 42px;
+    height: 42px;
+    width: 42px;
+    font-size: 38px;
+  }
+
+  .fa-question {
+    font-size: 24px;
+  }
+  
+  .fa-times {
+    font-size: 24px;
+  }
+
+  .game-clock > .clock-char {
+    flex: 0 0 0.8rem;
+  }
+
+  .guess-dialog {
+    width: 100vw;
+    left: 0;
+    height: 350px;
+    margin-top: -125px;
+    margin-left: 0;
+    border-radius: 0;
+    box-sizing: border-box;
+  }
+
+  .statement-panel {
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 0;
+    flex: 1 1 auto;
+  }
+
+  .guess-dialog-lower-panel {
+    padding-top:32px;
+    flex: 0 1 auto;
+  }
+
+  .guess-dialog-upper-panel {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+  }
+
+  .previous-statement-panel {
+    padding-bottom: 32px;
+  }
+}
