--- a/src/App.css
+++ b/src/App.css
@@ -404,19 +404,42 @@ input {
   display: flex;
   flex-direction: column;
   width: 600px;
-  height: 300px;
+  height: 400px;
   top: 50%;
   left: 50%;
-  margin-top: -150px;
-  margin-left: -200px;
+  margin-top: -200px;
+  margin-left: -300px;
   border-radius: 10px;
   box-shadow: inset 0 -8px 0 0 rgba(0,0,0,0.4), 0 0 0 4px rgba(255,255,255,0.4);
   padding: 16px;
 }
 
+.your-dice-label {
+  color: white;
+  font-size: 1.2rem;
+  text-shadow: 0 2px 1px rgb(0,0,0);
+  text-align: center;
+  padding: 16px 0;
+}
+
+.guess-panel-die-tray {
+  display: flex;
+  padding: 8px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.4);
+  justify-content: space-around;
+}
+
+.guess-dialog-upper-panel  {
+  display: flex;
+  flex-direction: column;
+  flex: 2 1 auto;
+}
+
 .statement-panel {
   display: flex;
-  margin-top: 48px;
+  flex: 1 1 auto;
   padding: 0 32px 0 32px;
   justify-content: space-around;
 }
@@ -461,7 +484,7 @@ input {
   display: flex;
   padding-bottom: 8px;
   flex-direction: column;
-  flex: 1 0 auto;
+  flex: 1 1 70px;
   justify-content: flex-end;
 }
 
@@ -492,13 +515,12 @@ input {
 
 .chat-message .chat-message-name {
   font-weight: 400;
-  padding: 6px 16px 6px 16px;
+  padding: 0 16px 4px 16px;
+  user-select: none;
   border-radius: 20px;
-  margin-right: 16px;
-  height: 25px;
-  display: inline-flex;
-  justify-content: center;
-  flex: 0 0 auto;
+  margin-right: 8px;
+  float: left;
+  line-height: 24px;
   text-align: center;
   text-shadow: 0 1px 1px rgba(0,0,0,0.4);
   box-shadow:inset 0 -3px 0 0 rgba(0,0,0,0.4);
@@ -530,12 +552,12 @@ input {
 
 .chat-message .chat-message-text {
   font-weight: 300;
-  display: flex;
-  padding-top: 6px;
-}
-
-.chat-message.local-player .chat-message-text {
-  text-align: right;
+  line-height: 28px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  text-align: left;
+  flex: 1 1 auto;
+  display: inline;
 }
 
 .chat-message:first-child {
@@ -561,8 +583,8 @@ input {
 
 .chat-message.local-player .chat-message-name{
   margin-right: 0;
-  margin-left: 16px;
-  
+  margin-left: 8px;
+  float: right;
 }
 
 .game-event-list {
@@ -955,6 +977,65 @@ input {
   animation-name: tooltipFadeIn;
   animation-duration: 200ms;
   border-radius:10px;
+}
+
+.error-screen {
+  position: fixed;
+  height: 260px;
+  width: 360px;
+  top: 50vh;
+  margin-top: -130px;
+  left: 50vw;
+  margin-left: -180px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #2f2f2f;
+  z-index: 200;
+  border-radius: 10px;
+  box-shadow: inset 0 -4px 0 0 rgba(0,0,0,0.4),
+    0 0 4px 0 rgba(0,0,0,0.4);
+}
+
+.error-screen-header {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  align-items: center;
+  color: lightgray;
+}
+
+.error-screen-symbol-container {
+  display: flex;
+  align-items: center;
+  flex: 1 1 auto;
+}
+
+.error-screen-symbol {
+  font-size: 100px;
+  color: firebrick;
+}
+
+.error-screen-message-container {
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
+  color: firebrick;
+  font-weight: 600;
+  padding-bottom: 32px;
+}
+
+.error-screen-footer {
+  display: flex;
+  flex: 0 0 50px;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.error-screen-footer .btn {
+  flex: 0 1 auto;
+  margin-left: 0;
 }
 
 .room-code-copy-link:hover::after {
